--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -74,7 +74,7 @@
               <a class="dropdown-item" href="{% url 'faculty_event_evaluations' %}">Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {% if request.path == '/faculty_events' %} active {% endif %}" href="faculty_events">
+        <a class="nav-link {% if request.path == '/faculty_events' %} active {% endif %}" href="/faculty_events">
           <i class="bi bi-calendar2-event-fill nav-icon"></i></i> <b>EVENTS</b>    
       </a>
     </li>
@@ -93,7 +93,7 @@
     <div id="eval" class = "container">
       <h3>Academic Year: 2024-2025</h3>
       <h4>Semester: 1st</h4>
-      <h4>Faculty Evaluation for Teachers Status: Ongoing </h4>
+      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} In Progress {% else %} Concluded {% endif %}  </h4>
      </div>
     {% endblock header %}
    
