--- a/Feedbacksystem/static/css/studentpage.css
+++ b/Feedbacksystem/static/css/studentpage.css
@@ -135,6 +135,9 @@ main {
   background-color: #ff9400  !important;
   color: #fafafa !important;
   }
+.nav-icon{
+    margin-right: 0.2em;
+  }
 .flex-column li a{
     background-color: #fafafa;
     &:focus, &:active {
@@ -279,41 +282,42 @@ main {
   align-self: center;
 }
 @media (max-width:900px) {
-  .header-title{
-    font-size: 0.9rem;
-   }
-   .subtitle{
-    font-size: 0.8rem;
-   }
-   .table th, .table td {
-    font-size: 0.75rem;
+.header-title{
+  font-size: 0.9rem;
   }
+  .subtitle{
+  font-size: 0.8rem;
+  }
+  .table th, .table td {
+  font-size: 0.75rem;
+}
+#sidebar {
+  margin-left: -250px; /* Adjust based on sidebar width */
+  z-index: 2; 
+}
+
+.content {
+  margin-left: 0;
+}
+
+.sidebar-collapsed #sidebar {
+  margin-left: 0;
+  z-index: 2;
+}
+
 }
 @media (max-width: 768px) {
-  #sidebar {
-      margin-left: -250px; /* Adjust based on sidebar width */
-      z-index: 2; 
-  }
 
-  .content {
-      margin-left: 0;
-  }
-
-  .sidebar-collapsed #sidebar {
-      margin-left: 0;
-      z-index: 2;
-  }
-
-   iframe{
+iframe{
   width:100% !important;
- }
-  .header-title{
+}
+.header-title{
   font-size: 0.85rem;
- }
-   .subtitle{
+}
+.subtitle{
   font-size: 0.7rem;
- }
- .table th, .table td {
+}
+.table th, .table td {
   font-size: 0.75rem;
 }
 .likert-horizontal input[type="radio"] {
@@ -341,25 +345,24 @@ main {
   height: 9em;
 }
 #eval h3{
-font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 #eval h4{
-font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 .title-container{
   visibility: hidden;
   opacity: 0;
 }
 #profile_name{
-margin-right: 2.75em;
+    margin-right: 2.75em;
 width: 100%;
 }
 .faculty_evaluation_table th,
 .faculty_evaluation_table td {
-
-        font-size: 0.65rem; /* Adjust the font size */
-        padding: 0.5em; /* Adjust the padding */
-    }
+  font-size: 0.65rem; /* Adjust the font size */
+  padding: 0.5em; /* Adjust the padding */
+  }
 #faculty-select option{
   font-size: 0.75rem;
 }
