--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -44,7 +44,7 @@
   
           <th  scope="col">OPTIONS </th>
       </tr>
-      {% for i in department %}
+      {% for i in page_obj %}
       <tr>
           <td>{{ i.name }}</td>
           <td style="display: flex; flex-direction: row; gap:1em;"> <a href="{% url 'view_department' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'edit_department' i.pk %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
@@ -56,4 +56,29 @@
   
   </table>
 </div>
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+      {% if page_obj.has_previous %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+          </a>
+      </li>
+      {% endif %}
+
+      {% for num in page_obj.paginator.page_range %}
+      <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+      </li>
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+          </a>
+      </li>
+      {% endif %}
+  </ul>
+</nav>
 {% endblock feature %}
