--- a/Feedbacksystem/templates/pages/edit_student_profile.html
+++ b/Feedbacksystem/templates/pages/edit_student_profile.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             {{ form }}
     <br>
-    <button type="submit" class="btn btn-warning">Save</button>
+    <button type="submit" class="btn custom-btn">Save</button>
     </form>
     </div>
     {% endblock feature %}
