--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -73,7 +73,7 @@
       <form method="get" action="" class="d-flex" style="gap: 1em;">
         {{faculty_evaluation_filter.form.search.label_tag}}
         {{faculty_evaluation_filter.form.search}}
-        <input type="submit" value="Search" class="btn btn-warning custom-btn">
+        <button type="submit" class="btn custom-btn"><i class="bi bi-search"></i></button>
       </form>
       <a href="{% url 'evaluations_csv' %}" class="btn btn-secondary ms-2" style="margin-right: auto;">Export</a>
     </div>
@@ -152,15 +152,15 @@
     </table>
   </div>
       {% if is_paginated %}
-      <nav class = "pagination" aria-label="...">
+      <nav class = "pagination justify-content-center" aria-label="...">
           <ul class="pagination">
               {% if page_obj.has_previous %}
             <li class="page-item ">
               <a class="page-link" tabindex= "-1" aria-disabled = "true" href ="?page={{ page_obj.previous_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Previous</a>
             </li>
               {% endif %}
-              {% for i in paginator.page_range%}
-              {% if i == page_obj.number%}
+              {% for i in paginator.page_range %}
+              {% if i == page_obj.number %}
   
             <li class="page-item active" aria-current="page">
               <a class="page-link" href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a>
