--- a/Feedbacksystem/templates/pages/eventhub.html
+++ b/Feedbacksystem/templates/pages/eventhub.html
@@ -1,5 +1,5 @@
 {% extends "pages/home.html" %}
-
+{% load static %}
 {% block title %}Events{% endblock %}
 
 {% block header %}
@@ -12,43 +12,59 @@
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <li>{{ message }}</li>
+    <p>{{ message }}</p>
     {% endfor %}
 </ul>
 {% endif %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <div class="table-responsive">
-                <table class="table table-bordered" style="width: 100%;">
-                    <thead>
-                        <tr>
-                            <th scope="col">TITLE</th>
-                            <th scope="col">DATE</th>
-                            <th scope="col">TIME</th>
-                            <th scope="col">LOCATION</th>
-                            <th scope="col">EVENT TYPE</th>
-                            <th scope="col">DESCRIPTION</th>
-                            <th scope="col">OPTIONS</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for i in event %}
-                        <tr>
-                            <td>{{ i.title }}</td>
-                            <td>{{ i.date }}</td>
-                            <td>{{ i.time }}</td>
-                            <td>{{ i.location }}</td>
-                            <td>{{ i.event_type }}</td>
-                            <td>{{ i.description }}</td>
-                            <td><a href="{% url 'event_detail' i.pk %}"><b>EVALUATE</b></a></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+
+<div class="btn-group">
+  <a href="{% url 'eventhub' %}" class="btn btn-success {% if request.path == '/eventhub' %} active {% endif %}" aria-current="page">Pending</a>
+  <a href="{% url 'eventhub_upcoming' %}" class="btn btn-success">Upcoming</a>
+  <a href="{% url 'eventhub_evaluated' %}" class="btn btn-success">Evaluated</a>
+  <a href="{% url 'eventhub_closed' %}" class="btn btn-success">Closed</a>
+</div>
+
+<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-3">
+
+{% for i in unevaluated_events %}
+  
+<div class="card border-0">
+    <div class="card-body">
+    {% if i.event_picture %}
+    <img src="{{ i.event_picture.url }}"  class="card-img-top img-fluid"  alt="Event Thumbnail">
+    {% else %}
+    <img src="{% static 'images/cvsu_thumbnail.jpg' %}"  class="card-img-top img-fluid" alt="CvSU Thumbnail">
+    {% endif %}
+      <h5 class="card-title">{{i.title}}</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">{{i.date}}</h6>
+      <p class="card-text">{{i.description|slice:":70"}}...</p>
+      {% if i.evaluation_status %}<a href="{% url 'event_detail' i.pk %}" class="card-link btn custom-btn">Evaluate</a>{% endif %}
+      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal{{ i.id }}">View Details</a>
     </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="eventModal{{ i.id }}" tabindex="-1" aria-labelledby="eventModalLabel{{ i.id }}" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="eventModalLabel{{ i.id }}">{{i.title}}</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>Date: {{ i.date }}</p>
+            <p>Time: {{ i.time }}</p>
+            <p>Location: {{ i.location }}</p>
+            <p>Description: {{ i.description }}</p>
+            <p>Evaluation Status: {{ i.evaluation_identifier }}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>  
+        </div>
+      </div>
+    </div>
+  </div>
+{% endfor %}
+
 </div>
 
 {% endblock feature %}
