--- a/Feedbacksystem/templates/pages/forms.html
+++ b/Feedbacksystem/templates/pages/forms.html
@@ -11,13 +11,34 @@
 
 {% block feature %}
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 mt-2">
       <div class="card">
         <div class="card-body">
           <h2 class="card-title">Faculty Evaluation Form</h2>
-          <a href="{% url 'edit_form' %}" class="btn btn-warning custom-btn" style="width: 100%;">Edit</a>
+          <a href="{% url 'edit_faculty_evaluation_form' %}" class="btn btn-warning custom-btn" style="width: 100%;"><i class="bi bi-pencil-square"></i> <b>Edit</b></a>
         </div>
       </div>
     </div>
+
+    <div class="col-md-6 mt-2">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">School Event Evaluation Form</h2>
+          <a href="{% url 'edit_school_event_form' %}" class="btn btn-warning custom-btn" style="width: 100%;"><i class="bi bi-pencil-square"></i> <b>Edit</b></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 mt-2">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Webinar/Seminar Evaluation Form</h2>
+          <a href="{% url 'edit_webinar_seminar_form' %}" class="btn btn-warning custom-btn" style="width: 100%;"><i class="bi bi-pencil-square"></i> <b>Edit</b></a>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+ 
 {% endblock feature %}
