--- a/Feedbacksystem/templates/pages/sections.html
+++ b/Feedbacksystem/templates/pages/sections.html
@@ -53,7 +53,7 @@
         <th  scope="col">SECTION </th>
         <th  scope="col">OPTIONS </th>    
     </tr>
-    {% for i in section %}
+    {% for i in page_obj %}
     <tr>
         <td>{{ i.name }}</td>   
 
@@ -68,4 +68,30 @@
     {% endfor %}
 
 </table>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+      {% if page_obj.has_previous %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+          </a>
+      </li>
+      {% endif %}
+
+      {% for num in page_obj.paginator.page_range %}
+      <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+      </li>
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+          </a>
+      </li>
+      {% endif %}
+  </ul>
+</nav>
 {% endblock feature %}
