--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -3,8 +3,18 @@
 {% block title %}Students{% endblock %}
 
 {% block header %}
-
-    <h2> Manage Students</h2>
+        <div class="row">
+          <div class="col-md-5">
+            <h2> Manage Students</h2>
+          </div>
+          <div class="col-lg-6 col-md-7 col-12 mt-1 ">
+            <form method="get" action="" class="d-flex" style="gap: 1em;">
+                {{student_filter.form.search.label_tag}}
+                {{student_filter.form.search}}
+            <button type="submit" class="btn custom-btn"><i class="bi bi-search"></i></button>
+              </form>
+          </div>
+        </div>
     <hr>
    
 {% endblock header %}
@@ -17,10 +27,12 @@
     {% endfor %}
 </ul>
 {% endif %}
-<div class="row g-0">
-<div class="col-lg-2 col-md-3 mb-2"><a class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style = "color: black; text-decoration: none;"><i class="bi bi-person-plus-fill"></i><b>Add Student</b></a></div>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+  <div class="row g-0 align-items-center">
+  <div class="col-lg-2 col-md-3 col-6 mb-2"><a class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-person-plus-fill"></i><b>Add Student</b></a>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
@@ -40,14 +52,45 @@
       </div>
     </div>
   </div>
-<div class="col-lg-9 col-md-8 mb-2">
-  <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-  <input class="mb-2" type="file" name="studentfile" accept=".xlsx"> 
-  <button type="submit" class="btn btn-primary">Import Excel File</button>
-</div>
-</form>
-</div>
+  
+  
+  <div class="col-lg-2 col-md-3 col-6 mb-2">
+    <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#filterModal">
+      <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+    </button>
+  </div>
+  
+  <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="filterModalLabel">Filter Options</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form method="get" action="">
+            {{student_filter.form.Section.label_tag}}
+            {{student_filter.form.Section}}
+            {{student_filter.form.status.label_tag}}
+            {{student_filter.form.status}}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <input type = "submit" value="Save Changes" class="btn btn-success">
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6 col-md-5 col-12 mb-2">
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+    <input class="mb-2" type="file" name="studentfile" accept=".xlsx">
+    <button type="submit" class="btn btn-primary">Import Excel File</button>
+  </div>
+  </form>
+  </div>
+
 <div class="table-responsive">
   <table class="table table-bordered">
       <tr>
@@ -65,7 +108,7 @@
   
   
       </tr>
-      {% for i in students %}
+      {% for i in page_obj %}
       <tr>
           <td>{{ i.pk }}</td>
           <td>{{ i.first_name }}</td>
@@ -86,4 +129,35 @@
   
   </table>
 </div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+      {% if page_obj.has_previous %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+          </a>
+      </li>
+      {% endif %}
+
+      {% for num in page_obj.paginator.page_range %}
+      <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+      </li>
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+      <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+          </a>
+      </li>
+      {% endif %}
+  </ul>
+</nav>
+
+
+
 {% endblock feature %}
+
+
