--- a/Feedbacksystem/templates/pages/users.html
+++ b/Feedbacksystem/templates/pages/users.html
@@ -1,5 +1,5 @@
 {% extends "pages/admin.html" %}
-
+{% load custom_filters %}
 {% block title %}Users{% endblock %}
 
 {% block header %}
@@ -10,7 +10,43 @@
 {% endblock header %}
 
 {% block feature %}
+<div class="row">
+    <div class="col-lg-5 col-md-3">
+        <button type="button" class="btn btn-warning custom-btn mb-2" data-bs-toggle="modal" data-bs-target="#filterModal">
+            <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+        </button>
+    </div>
+    <div class="col-lg-6 col-md-7 mb-2" style="margin-left: auto;">
+        <form method="get" action="" class="d-flex" style="gap: 1em;">
+            {{user_filter.form.search.label_tag}}
+            {{user_filter.form.search}}
+        <button type="submit" class="btn custom-btn"><i class="bi bi-search"></i></button>
+          </form>
+        </div>
+    </div>
 
+<div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="filterModalLabel">Filter Options</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form method="get" action="">
+            {{user_filter.form.groups.label_tag}}
+            {{user_filter.form.groups}}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <input type = "submit" value="Save Changes" class="btn btn-success">
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
 <div class="table-responsive">
     <table class="table table-bordered table-responsive">
         <tr>
@@ -18,19 +54,49 @@
             <th  scope="col">ROLE</th>
             <th  scope="col">OPTIONS</th>
         </tr>
-        {% for user_id, groups in user_groups.items %}
-        <tr>
-            <td>{{ user_id }} </td>
-            {% for group in groups %}
-            <td>{{ group.name }}</td>
-            {% endfor %}
+        {% for user in page_obj %}
+            <tr>
+                <td>{{ user.username }}</td>
+                <td>
+                    {% with groups=user_groups|get_item:user.username %}
+                    {% for group in groups %}
+                        {{ group.name }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                    {% endwith %}
+                </td>
             <td>
                 <div class="d-flex" style="gap: 1em; align-items: center; margin: auto;">
-                <a href="{% url 'edit_user_group' user_id %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button>
-                <a href="{% url 'delete_user' user_id %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px;" ><i style="font-size:23px" class='bx bxs-trash' ></i></button></a></td>
+                <a href="{% url 'edit_user_group' user.username %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button>
+                <a href="{% url 'delete_user' user.username %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px;" ><i style="font-size:23px" class='bx bxs-trash' ></i></button></a></td>
                 </div>
         </tr>
         {% endfor %}
     </table>
 </div>
+
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+        <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+        </li>
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 {% endblock feature %}
