--- a/Feedbacksystem/templates/pages/view_admin_schoolevent_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_admin_schoolevent_evaluations.html
@@ -4,37 +4,44 @@
 
 {% block header %}
 
-    <h2> Event Evaluation Details </h2>
+    <h2> Event Evaluation Form Details </h2>
     <hr>
    
 {% endblock header %}
 <hr>
 {% block feature %}
 
-<table class="table table-responsive " >
+<table class="table table-responsive table-bordered " >
         <tr>
          <th  scope="col" style="color:#fafafa;  background: #2a9134">I.  OVERALL EVALUATION </th>
          <th  scope="col" style="color:#fafafa;  background: #2a9134">RATING</th>
     </tr>
     </thead>
+    {% for question in questions %}
     <tr>
-        <td>Relevance of the activity</td> 
-        <td> {{ school_event_form_details.relevance_of_the_activity }}</td> 
+        {% if question.order == 1 %}
+        <td>{{question.text}}</td>
+        <td> {{ event_form_details.relevance_of_the_activity }}</td>
+        {% endif %} 
     </tr>
     <tr>
-        <td>Quality of the activity</td> 
-        <td> {{ school_event_form_details.quality_of_the_activity }}</td> 
+        {% if question.order == 2 %}
+        <td>{{question.text}}</td>
+        <td> {{ event_form_details.quality_of_the_activity }}</td>
+        {% endif %} 
     </tr>
     <tr>
-        <td>Timeliness</td> 
-        <td> {{ school_event_form_details.timeliness }}</td> 
+        {% if question.order == 3 %}
+        <td>{{question.text}}</td>
+        <td> {{ event_form_details.timeliness }}</td>
+        {% endif %} 
     </tr>
     <tr>
-        <td>Suggestions and Comments:</td> 
-        <td> {{ school_event_form_details.suggestions_and_comments }}</td> 
+        {% if question.order == 4 %}
+        <td>{{question.text}}</td>
+        <td> {{ event_form_details.suggestions_and_comments }}</td> 
+        {% endif %}
     </tr>
-
-
-
+    {% endfor %}
 </table>
 {% endblock feature %}
